content, state, communication

--- a/client/src/pages/exercises/[id].astro
+++ b/client/src/pages/exercises/[id].astro
@@ -8,6 +8,5 @@ const { id } = Astro.params;
 ---
 
 <Layout title="Exercise">
-    <p>Exercise {id}</p>
-    <Exercise client:load />
+    <Exercise id={id} client:load />
 </Layout>
