--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,8 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Languages from '../components/Languages.svelte';
 ---
 
-<Layout title="Welcome">
+<!-- <Layout title="Welcome">
 	<p>Programming time!</p>
 	<a href="/exercises/1">Start</a>
+</Layout> --!>
+
+<Layout title="Languages">
+	<h1>Available languages</h1>
+	<Languages client:load/>
 </Layout>
