--- a/client/src/layouts/Layout.astro
+++ b/client/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import UserInfo from "../components/auth/UserInfo.svelte";
 const title = Astro.props.title || "My epic title";
 ---
 
@@ -12,6 +13,7 @@ const title = Astro.props.title || "My epic title";
 		<title>{title}</title>
 	</head>
 	<body>
+		<UserInfo client:visible />
 		<slot />
 	</body>
 </html>
